--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 
 # Run test script(s)
 script:
-  - docker run jbvance/react-test npm test -- --coverage
+  - docker run -e CI=true USERNAME/react-test npm test
 
 after_success:
   - docker build -t jbvance/multi-client ./client
@@ -22,3 +22,16 @@ after_success:
   - docker push jbvance/multi-nginx
   - docker push jbvance/multi-server
   - docker push jbvance/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-449515569613
+  bucket_path: docker-multi
+  #Only deploy from master branch
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
