--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 
 # Run test script(s)
 script:
-  - docker run -e CI=true USERNAME/react-test npm test
+  - docker run -e CI=true jbvance/react-test npm test
 
 after_success:
   - docker build -t jbvance/multi-client ./client
